[AM] Updated requirements 0.2

--- a/Documentation/Requirements/Requirements Doc GRN v2/Requirements Document GRN.tex
+++ b/Documentation/Requirements/Requirements Doc GRN v2/Requirements Document GRN.tex
@@ -105,7 +105,7 @@ Gitlab - An all in one project management system with built in continuous integr
 Karma - a test runner for javascript
 
 \item
-Jasmine - a development framework for javascript
+Mocha - a development framework for TDD javascript tests
 
 \item
 Gulp - javascript build system solving similar problems to Grunt
@@ -119,6 +119,8 @@ Twitter Bootstrap - Template for making websites responsive
 \item
 Scrum - A framework for project management which emphasises communication and a short period between releases.
 
+\item 
+angular2-translator - a translation engine for angular 2 projects
 \end{itemize}
 
 \newpage
@@ -409,6 +411,24 @@ Follow a player
 \item[19)]
 Follow another user
 
+\item[20)]
+Each page should be translatable into different languages
+
+\item[20.1)]
+Translation to Romanian
+
+\item[20.2)]
+Translation to Lithuanian
+
+\item[20.3)]
+Translation to Greek
+
+\item[20.4)]
+Translation to Russian
+
+\item[20.5)]
+Translation to Chinese
+
 
 \end{itemize}
 
@@ -417,12 +437,9 @@ Follow another user
 \begin{itemize}
 
 \item[1)]
-Translation to native languages
-
-\item[2)]
 Follower Groups
 
-\item[3)]
+\item[2)]
 Creation of events that users can attend
 
 \end{itemize}
