[AM] Corrected gantt chart and added user journey

--- a/Documentation/Requirements/Requirements Doc GRN v3/Requirements Document GRN.tex
+++ b/Documentation/Requirements/Requirements Doc GRN v3/Requirements Document GRN.tex
@@ -133,8 +133,9 @@ Scrum - A framework for project management which emphasises communication and a 
 
 We plan to use a 2 week sprint. Our high-level plan is shown here:
 
-%TODO FIX Gannt chart
-\includegraphics[width=\textwidth]{ganttchart}
+\includegraphics[scale=0.4]{gannt1}
+
+\includegraphics[scale=0.3]{gannt2}
 
 "Today" on this graph refers to Monday the 14th of November 2016.
 
@@ -276,11 +277,6 @@ The core requirements must be completed before any extra functionality is added
 Tests should be written before coding starts on a module, component or directive
 \end{itemize}
 
-%TODO 
-%
-%Assuming the team will be working on the web app, we would also like to see wireframes for the responsive designs. Currently, the three wireframes don’t really 
-%say much about the platform. Do users go directly into the dashboard or do they have to login first? If they have to login, do you have wireframes to show this? So it would be really good to describe these wireframes and also include a user journey as discussed in the previous meeting.
-%Can we also do something about these pages so they don’t break into a new page when not needed.
 
 \newpage
 \section{Wireframes}
@@ -296,6 +292,10 @@ Tests should be written before coding starts on a module, component or directive
 \newpage
 \subsection{Edit Profile}
 \fbox{ \includegraphics[width=\textwidth]{wireframe-profile-edit} }
+
+\newpage
+\subsection{User Journey}
+\fbox{ \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{wireframe-user-journey} }
 
 \newpage
 \section{Specific requirements}
