[AM] Added mobile wireframes

--- a/Documentation/Requirements/Requirements Doc GRN v3/Requirements Document GRN.tex
+++ b/Documentation/Requirements/Requirements Doc GRN v3/Requirements Document GRN.tex
@@ -121,10 +121,8 @@ Scrum - A framework for project management which emphasises communication and a 
 
 
 \item 
-[tbd] angular2-translate - a translation engine for angular 2 projects
+angular2-translate - a translation engine for angular 2 projects
 
-\item 
-[tbd] angular2-translator - a translation engine for angular 2 projects
 \end{itemize}
 
 \newpage
@@ -281,17 +279,37 @@ Tests should be written before coding starts on a module, component or directive
 \newpage
 \section{Wireframes}
 
-\newpage
-\subsection{Dashboard}
-\fbox{ \includegraphics[width=\textwidth]{wireframe-dashboard} }
+\subsection{Desktop Wireframes}
 
 \newpage
-\subsection{Team Page}
-\fbox{ \includegraphics[width=\textwidth]{wireframe-team-player-page} }
+\subsubsection{Dashboard}
+\fbox{ \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{wireframe-dashboard} }
 
 \newpage
-\subsection{Edit Profile}
-\fbox{ \includegraphics[width=\textwidth]{wireframe-profile-edit} }
+\subsubsection{Team Page}
+\fbox{ \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{wireframe-team-player-page} }
+
+\newpage
+\subsubsection{Edit Profile}
+\fbox{ \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{wireframe-profile-edit} }
+
+\newpage
+\subsubsection{User Journey}
+\fbox{ \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{wireframe-user-journey} }
+
+\subsection{Mobile Wireframes}
+
+\newpage
+\subsubsection{Dashboard}
+\fbox{ \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{wireframe-mobile-dashboard} }
+
+\newpage
+\subsubsection{Team Page}
+\fbox{ \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{wireframe-mobile-team-player-page} }
+
+\newpage
+\subsubsection{Edit Profile}
+\fbox{ \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{wireframe-mobile-profile-edit} }
 
 \newpage
 \subsection{User Journey}
