--- a/src/i18n/ro.json
+++ b/src/i18n/ro.json
@@ -1,29 +1,29 @@
 {
 
-  "Follow": "Follow",
-  "Unfollow": "Unfollow",
-  "Me": "Me",
+  "Follow": "FollowRO",
+  "Unfollow": "UnfollowRO",
+  "Me": "MeRO",
 
   "ClubProfile": {
-    "ClubProfile": "Club Profile",
-    "Description": "Description",
-    "Teams": "Teams",
-    "Posts": "Posts"
+    "ClubProfile": "Club ProfileRO",
+    "Description": "DescriptionRO",
+    "Teams": "TeamsRO",
+    "Posts": "PostsRO"
   },
 
   "ClubsFollowed": {
-    "Clubs": "Clubs"
+    "Clubs": "ClubsRO"
   },
 
   "Dashboard": {
-    "Dashboard": "Dashboard",
-    "ShowMore": "Show More"
+    "Dashboard": "DashboardRO",
+    "ShowMore": "Show MoreRO"
   },
 
   "List": {
-    "Clubs": "Clubs",
-    "Teams": "Teams",
-    "Players": "Players"
+    "Clubs": "ClubsRO",
+    "Teams": "TeamsRO",
+    "Players": "PlayersRO"
   },
 
   "Login": {
@@ -37,56 +37,59 @@
   },
 
   "PlayerProfile": {
-    "PlayerProfile": "Player Profile",
-    "Age": "Age",
-    "Height": "Height",
-    "Weight": "Weight",
-    "Gender": "Gender",
-    "Teams": "Teams",
-    "Clubs": "Clubs",
-    "Biography": "Bio"
+    "PlayerProfile": "Player ProfileRO",
+    "Age": "AgeRO",
+    "Height": "HeightRO",
+    "Weight": "WeightRO",
+    "Gender": "GenderRO",
+    "Teams": "TeamsRO",
+    "Clubs": "ClubsRO",
+    "Biography": "BioRO"
   },
 
   "PlayersFollowed": {
-    "Players": "Players"
+    "Players": "PlayersRO"
   },
 
   "Post": {
-    "likes": "likes",
-    "SaveChanges": "Save Changes",
-    "Close": "Close",
-    "ShowMore": "Show More",
-    "Comment": "Comment"
+    "likes": "likesRO",
+    "SaveChanges": "Save ChangesRO",
+    "Close": "CloseRO",
+    "ShowMore": "Show MoreRO",
+    "Comment": "CommentRO"
   },
 
   "UserProfile": {
-    "UserProfile": "User Profile",
-    "Email": "Email",
-    "Following": "Following",
-    "SeeAll": "See all"
+    "UserProfile": "User ProfileRO",
+    "Email": "EmailRO",
+    "Following": "FollowingRO",
+    "SeeAll": "See allRO",
+    "Players": "PlayersRO",
+    "Teams": "TeamsRO",
+    "Clubs": "ClubsRO"
   },
 
   "Results": {
-    "Location": "Location",
-    "Age": "Age",
-    "AgeGroup": "Age Group"
+    "Location": "LocationRO",
+    "Age": "AgeRO",
+    "AgeGroup": "Age GroupRO"
   },
 
   "Search": {},
 
   "TeamProfile": {
-    "TeamProfile": "Team Profile",
-    "Club": "Club",
-    "AgeGroup": "Age Group",
-    "Type": "Type",
-    "Gender": "Gender",
-    "Description": "Description",
-    "Players": "Players",
-    "Posts": "Posts"
+    "TeamProfile": "Team ProfileRO",
+    "Club": "ClubRO",
+    "AgeGroup": "Age GroupRO",
+    "Type": "TypeRO",
+    "Gender": "GenderRO",
+    "Description": "DescriptionRO",
+    "Players": "PlayersRO",
+    "Posts": "PostsRO"
   },
 
   "TeamsFollowed": {
-    "TeamsFollowed": "Teams Followed"
+    "TeamsFollowed": "Teams FollowedRO"
   }
 
 }
