--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -44,7 +44,8 @@
     "Gender": "Gender",
     "Teams": "Teams",
     "Clubs": "Clubs",
-    "Biography": "Bio"
+    "Biography": "Bio",
+    "Posts": "Posts"
   },
 
   "PlayersFollowed": {
