--- a/src/i18n/lt.json
+++ b/src/i18n/lt.json
@@ -53,7 +53,7 @@
   },
 
   "Post": {
-    "likes": "Teigiami įvertinimai",
+    "likes": "\"Patinka\"",
     "SaveChanges": "Išsaugoti pokyčius",
     "Close": "Uždaryti",
     "ShowMore": "Rodyti daugiau",
