Likes pluralize correctly.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -54,6 +54,7 @@
 
   "Post": {
     "likes": "likes",
+    "like": "like",
     "SaveChanges": "Save Changes",
     "Close": "Close",
     "ShowMore": "Show More",
