--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -54,6 +54,7 @@
 
   "Post": {
     "likes": "ライク",
+    "like": "ライク",
     "SaveChanges": "変更を保存",
     "Close": "閉じる",
     "ShowMore": "もっと見る",
