--- a/src/i18n/lt.json
+++ b/src/i18n/lt.json
@@ -54,6 +54,7 @@
 
   "Post": {
     "likes": "\"Patinka\"",
+    "like": "like",
     "SaveChanges": "Išsaugoti pokyčius",
     "Close": "Uždaryti",
     "ShowMore": "Rodyti daugiau",
