--- a/src/i18n/ro.json
+++ b/src/i18n/ro.json
@@ -54,6 +54,7 @@
 
   "Post": {
     "likes": "aprecieri",
+    "like": "apreciere",
     "SaveChanges": "Salvează Schimbări",
     "Close": "Închide",
     "ShowMore": "Mai multe",
