--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -54,6 +54,7 @@
 
   "Post": {
     "likes": "\"нравится\"",
+    "like": "like",
     "SaveChanges": "Сохранить изменения",
     "Close": "Закрыть",
     "ShowMore": "Показать больше",
