--- a/src/i18n/gr.json
+++ b/src/i18n/gr.json
@@ -54,6 +54,7 @@
 
   "Post": {
     "likes": "Άρεσε σε",
+    "like": "like",
     "SaveChanges": "Αποθήκευση Αλλαγών",
     "Close": "Ακύρωσε",
     "ShowMore": "Περισσότερα",
