Search results display fixed.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -72,6 +72,10 @@
   },
 
   "Results": {
+    "Players": "Players",
+    "Teams": "Teams",
+    "Clubs": "Clubs",
+    "Users":"Users",
     "Location": "Location",
     "Age": "Age",
     "AgeGroup": "Age Group"
