--- a/src/i18n/gr.json
+++ b/src/i18n/gr.json
@@ -72,6 +72,10 @@
   },
 
   "Results": {
+    "Clubs": "Σύλλογοι",
+    "Teams": "Ομάδες",
+    "Players": "Παίκτες",
+    "Users": "Users",
     "Location": "Τοποθεσία",
     "Age": "Ηλικία",
     "AgeGroup": "Ηλικιακή ομάδα"
