--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -72,6 +72,10 @@
   },
 
   "Results": {
+    "Clubs": "クラブ",
+    "Teams": "チーム",
+    "Players": "選手",
+    "Users": "ユーザー",
     "Location": "ロケーション",
     "Age": "年齢",
     "AgeGroup": "年齢層"
