--- a/src/i18n/ro.json
+++ b/src/i18n/ro.json
@@ -72,6 +72,10 @@
   },
 
   "Results": {
+    "Clubs": "Cluburi",
+    "Teams": "Echipe",
+    "Players": "Jucători",
+    "Users": "Utilizatori",
     "Location": "Locație",
     "Age": "Vârstă",
     "AgeGroup": "Grup de vârstă"
