--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -72,6 +72,10 @@
   },
 
   "Results": {
+    "Clubs": "Клубы",
+    "Teams": "Команды",
+    "Players": "Игроки",
+    "Users": "Users",
     "Location": "Местонахождение",
     "Age": "Возраст",
     "AgeGroup": "Возрастная группа"
