language list in navbar, "Language" translations TODO

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -32,7 +32,8 @@
 
   "NavBar": {
     "Dashboard":"Dashboard",
-    "List":"List",
+    "List": "List",
+    "Language": "Language",
     "Logout":"Logout"
   },
 
