Romanian and Japanese done.

--- a/src/i18n/ro.json
+++ b/src/i18n/ro.json
@@ -33,7 +33,8 @@
   "NavBar": {
     "Dashboard":"Dashboard",
     "List":"Listează",
-    "Logout":"Deconectare"
+    "Logout":"Deconectare",
+    "Language": "Limba"
   },
 
   "PlayerProfile": {
