--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -33,7 +33,8 @@
   "NavBar": {
     "Dashboard": "ニュースフィード",
     "List": "名鑑",
-    "Logout": "ログアウト"
+    "Logout": "ログアウト",
+    "Language": "言語"
   },
 
   "PlayerProfile": {
