--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -20,6 +20,12 @@
     "ShowMore": "Mostra di piú"
   },
 
+  "Fixture": {
+    "Fixture": "Fixture",
+    "Home": "Home",
+    "Away": "Away"
+  },
+
   "List": {
     "Clubs": "Club",
     "Teams": "Squadra",
@@ -92,7 +98,9 @@
     "Gender": "Genere",
     "Description": "Descrizione",
     "Players": "Giocatori",
-    "Posts": "Post"
+    "Posts": "Post",
+    "UpcomingFixtures": "Upcoming Fixtures",
+    "RecentFixtures": "Recent Fixtures"
   },
 
   "TeamsFollowed": {
