[AM] Results page added

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -83,6 +83,7 @@
     "Teams": "Teams",
     "Clubs": "Clubs",
     "Users":"Users",
+    "Fixtures": "Fixtures",
     "Location": "Location",
     "Age": "Age",
     "AgeGroup": "Age Group"
