--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -83,6 +83,7 @@
     "Teams": "Equipos",
     "Clubs": "Clubs",
     "Users":"Usuarios",
+    "Fixtures": "Fixtures",
     "Location": "Ubicación",
     "Age": "Edad",
     "AgeGroup": "Grupo de edad"
