--- a/src/i18n/gr.json
+++ b/src/i18n/gr.json
@@ -83,6 +83,7 @@
     "Teams": "Ομάδες",
     "Players": "Παίκτες",
     "Users": "Users",
+    "Fixtures": "Fixtures",
     "Location": "Τοποθεσία",
     "Age": "Ηλικία",
     "AgeGroup": "Ηλικιακή ομάδα"
