--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -83,6 +83,7 @@
     "Teams": "チーム",
     "Players": "選手",
     "Users": "ユーザー",
+    "Fixtures": "Fixtures",
     "Location": "ロケーション",
     "Age": "年齢",
     "AgeGroup": "年齢層"
