--- a/src/i18n/lt.json
+++ b/src/i18n/lt.json
@@ -83,6 +83,7 @@
     "Teams": "Komandos",
     "Players": "Žaidėjai",
     "Users": "Users",
+    "Fixtures": "Fixtures",
     "Location": "Vieta",
     "Age": "Amžius",
     "AgeGroup": "Amžiaus grupė"
