--- a/src/i18n/ro.json
+++ b/src/i18n/ro.json
@@ -83,6 +83,7 @@
     "Teams": "Echipe",
     "Players": "Jucători",
     "Users": "Utilizatori",
+    "Fixtures": "Fixtures",
     "Location": "Locație",
     "Age": "Vârstă",
     "AgeGroup": "Grup de vârstă"
