--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -82,6 +82,7 @@
     "Teams": "球队",
     "Clubs": "俱乐部",
     "Users":"用户",
+    "Fixtures": "Fixtures",
     "Location": "居住地",
     "Age": "年龄",
     "AgeGroup": "年龄段"
