--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -83,6 +83,7 @@
     "Teams": "Squadre",
     "Clubs": "Club",
     "Users":"Utenti",
+    "Fixtures": "Fixtures",
     "Location": "Localitá",
     "Age": "Etá",
     "AgeGroup": "Gruppi di etá"
