--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -83,6 +83,7 @@
     "Teams": "Команды",
     "Players": "Игроки",
     "Users": "Users",
+    "Fixtures": "Fixtures",
     "Location": "Местонахождение",
     "Age": "Возраст",
     "AgeGroup": "Возрастная группа"
