Romanian and Japanese added.

--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -21,9 +21,9 @@
   },
 
   "Fixture": {
-    "Fixture": "Fixture",
-    "Home": "Home",
-    "Away": "Away"
+    "Fixture": "試合スケジュール",
+    "Home": "ホーム",
+    "Away": "離れた"
   },
 
   "List": {
