--- a/src/i18n/ro.json
+++ b/src/i18n/ro.json
@@ -23,7 +23,7 @@
   "Fixture": {
     "Fixture": "Meci",
     "Home": "Acasă",
-    "Away": "Vizită"
+    "Away": "În deplasare"
   },
 
   "List": {
