--- a/src/i18n/gr.json
+++ b/src/i18n/gr.json
@@ -55,7 +55,7 @@
 
   "Post": {
     "likes": "Άρεσε σε",
-    "like": "like",
+    "like": "Μου Αρέσει",
     "SaveChanges": "Αποθήκευση Αλλαγών",
     "Close": "Ακύρωσε",
     "ShowMore": "Περισσότερα",
@@ -76,7 +76,7 @@
     "Clubs": "Σύλλογοι",
     "Teams": "Ομάδες",
     "Players": "Παίκτες",
-    "Users": "Users",
+    "Users": "Χρήστες",
     "Location": "Τοποθεσία",
     "Age": "Ηλικία",
     "AgeGroup": "Ηλικιακή ομάδα"
