[130] Some extra tests, progress on dissertation

--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -1,8 +1,12 @@
 
-@book{Alice,
-  author    = "Carroll, L.", 
-  title     = "Alice's Adventures in Wonderland", 
-  publisher = "Macmillan", 
-  year      = "1865"
+%http://ieeexplore.ieee.org/abstract/document/6802994/?part=1
+@article{meyer2014continuous,
+  title={Continuous integration and its tools},
+  author={Meyer, Mathias},
+  journal={IEEE software},
+  volume={31},
+  number={3},
+  pages={14--16},
+  year={2014},
+  publisher={IEEE}
 }
-
